tests/refinements/refinements.exp
Error ------------------------------------------------------ assignment.js:16:14

Cannot assign `x.parent` to `x` because null or undefined is incompatible with
`Bar`.


Error ------------------------------------------------------ assignment.js:16:14

null or undefined is incompatible with `Bar`.


Error ------------------------------------------------------ assignment.js:22:16

Cannot get `x.parent` because property `parent` is missing in null or undefined.


Error ------------------------------------------------------------- bool.js:12:5

Cannot get `x[0]` because an indexer property is missing in null or undefined.


Error ------------------------------------------------------------- bool.js:18:9

Cannot get `x[0]` because an indexer property is missing in null or undefined.


Error ------------------------------------------------------------ bool.js:24:13

Cannot perform arithmetic operation because boolean is not a number.


Error ------------------------------------------------------------- bool.js:27:7

Cannot perform arithmetic operation because boolean is not a number.


Error ------------------------------------------------------------ bool.js:37:14

Cannot get `x.result` because property `result` is missing in object type.


Error ------------------------------------------------------------ bool.js:44:14

Cannot get `x.result` because property `result` is missing in object type.


Error: cond_prop.js:11
 11:   return getTypeASTName(typeAST.type); // error, BadType not a subtype of Type
                             ^^^^^^^^^^^^ BadType. This type is incompatible with the expected param type of
  9: function getTypeASTName(typeAST: Type): string {
                                      ^^^^ union: `Name` | `ListType` | `NonNullType`
  Member 1:
    3: type Type = Name | ListType | NonNullType;
                   ^^^^ Name
  Error:
   11:   return getTypeASTName(typeAST.type); // error, BadType not a subtype of Type
                               ^^^^^^^^^^^^ BadType. This type is incompatible with
    3: type Type = Name | ListType | NonNullType;
                   ^^^^ Name
    Property `kind` is incompatible:
        3: type Type = Name | ListType | NonNullType;
                       ^^^^ property `kind`. Property not found in
       11:   return getTypeASTName(typeAST.type); // error, BadType not a subtype of Type
                                   ^^^^^^^^^^^^ BadType
  Member 2:
    3: type Type = Name | ListType | NonNullType;
                          ^^^^^^^^ ListType
  Error:
   11:   return getTypeASTName(typeAST.type); // error, BadType not a subtype of Type
                               ^^^^^^^^^^^^ BadType. This type is incompatible with
    3: type Type = Name | ListType | NonNullType;
                          ^^^^^^^^ ListType
    Property `kind` is incompatible:
        3: type Type = Name | ListType | NonNullType;
                              ^^^^^^^^ property `kind`. Property not found in
       11:   return getTypeASTName(typeAST.type); // error, BadType not a subtype of Type
                                   ^^^^^^^^^^^^ BadType
  Member 3:
    3: type Type = Name | ListType | NonNullType;
                                     ^^^^^^^^^^^ NonNullType
  Error:
   11:   return getTypeASTName(typeAST.type); // error, BadType not a subtype of Type
                               ^^^^^^^^^^^^ BadType. This type is incompatible with
    3: type Type = Name | ListType | NonNullType;
                                     ^^^^^^^^^^^ NonNullType
    Property `kind` is incompatible:
        3: type Type = Name | ListType | NonNullType;
                                         ^^^^^^^^^^^ property `kind`. Property not found in
       11:   return getTypeASTName(typeAST.type); // error, BadType not a subtype of Type
                                   ^^^^^^^^^^^^ BadType

Error ------------------------------------------------------- cond_prop.js:19:14

Cannot get `x.result` because property `result` is missing in object type.


Error ------------------------------------------------------- cond_prop.js:24:16

Cannot get `x.result` because property `result` is missing in object type.


Error ------------------------------------------------------- cond_prop.js:26:14

Cannot get `x.result` because property `result` is missing in object type.


Error ------------------------------------------------------- cond_prop.js:36:12

Cannot get `t.bar` because property `bar` is missing in object type.


Error ------------------------------------------------------- cond_prop.js:46:12

Cannot get `t.foo` because property `foo` is missing in object type.


Error ------------------------------------------------------- cond_prop.js:48:12

Cannot get `t.quux` because property `quux` is missing in object type.


Error ------------------------------------------------------- cond_prop.js:54:11

Property `p` is missing in null.


Error ---------------------------------------------------------------- eq.js:5:9

Cannot compare string to number.


Error --------------------------------------------------------------- eq.js:19:9

Cannot compare string literal `bar` to number.


Error --------------------------------------------------------------- eq.js:19:9

Cannot compare string literal `foo` to number.


Error ---------------------------------------------------- hasOwnProperty.js:4:5

Cannot call `x.y` because undefined is not a function.


Error ---------------------------------------------------- hasOwnProperty.js:6:7

Cannot call `x.y` because undefined is not a function.


Error ---------------------------------------------------- hasOwnProperty.js:9:7

Cannot call `x.z` because property `z` is missing in object type.


Error -------------------------------------------------- heap_defassign.js:10:21

Cannot assign `obj.p` to `x` because string is incompatible with number.


Error -------------------------------------------------- heap_defassign.js:16:21

Cannot assign `obj.p` to `x` because string is incompatible with number.


Error -------------------------------------------------- heap_defassign.js:22:21

Cannot assign `obj.p` to `x` because string is incompatible with number.


Error -------------------------------------------------- heap_defassign.js:30:21

Cannot assign `obj.p` to `y` because string is incompatible with number.


Error -------------------------------------------------- heap_defassign.js:38:21

Cannot assign `obj.p` to `y` because string is incompatible with number.


Error -------------------------------------------------- heap_defassign.js:62:25

Cannot assign `obj.p` to `y` because string is incompatible with number.


Error -------------------------------------------------- heap_defassign.js:65:20

Cannot assign `obj.p` to `z` because number is incompatible with string.


Error -------------------------------------------------- heap_defassign.js:73:21

Cannot assign `obj.p` to `z` because string is incompatible with number.


Error ------------------------------------------- missing-property-cond.js:11:10

Cannot get `o.p2.x` because property `x` is missing in property `p2` of unknown
type.


Error -------------------------------------------- missing-property-cond.js:16:5

Cannot get `o.p3` because property `p3` is missing in object type.


Error ------------------------------------------- missing-property-cond.js:23:10

Cannot get `o.p4.x` because property `x` is missing in property `p4` does not
exist.


Error -------------------------------------------- missing-property-cond.js:37:9

Property `bar` is missing in mixed.


Error ------------------------------------------- missing-property-cond.js:41:16

Property `bar` is missing in mixed.


Error ------------------------------------------- missing-property-cond.js:65:12

Property `q` is missing in null.


Error ------------------------------------------------------------ mixed.js:8:17

Cannot call `takesString` with `x` bound to `x` because number is incompatible
with string.


Error ------------------------------------------------------------- mixed.js:9:6

Cannot cast `!x` to boolean literal `false` because boolean is incompatible with
boolean literal `false`.


Error ----------------------------------------------------------- mixed.js:21:17

Cannot call `takesNumber` with `x` bound to `x` because string is incompatible
with number.


Error ------------------------------------------------------------ mixed.js:22:6

Cannot cast `!x` to boolean literal `false` because boolean is incompatible with
boolean literal `false`.


Error ----------------------------------------------------------- mixed.js:34:17

Cannot call `takesString` with `x` bound to `x` because boolean is incompatible
with string.


Error ------------------------------------------------------------ mixed.js:35:6

Cannot cast `x` to boolean literal `true` because boolean is incompatible with
boolean literal `true`.


Error ----------------------------------------------------------- mixed.js:47:17

Cannot call `takesString` with `x` bound to `x` because function is incompatible
with string.


Error ----------------------------------------------------------- mixed.js:53:17

Cannot call `takesString` with `x` bound to `x` because:
 - null is incompatible with string.
 - object is incompatible with string.


Error ----------------------------------------------------------- mixed.js:59:17

Cannot call `takesString` with `x` bound to `x` because array is incompatible
with string.


Error ----------------------------------------------------------- mixed.js:65:17

Cannot call `takesString` with `x` bound to `x` because undefined is
incompatible with string.


Error ----------------------------------------------------------- mixed.js:71:17

Cannot call `takesString` with `x` bound to `x` because null is incompatible
with string.


Error ----------------------------------------------------------- mixed.js:77:17

Cannot call `takesString` with `x` bound to `x` because:
 - null is incompatible with string.
 - undefined is incompatible with string.


Error ----------------------------------------------------------- mixed.js:83:17

Cannot call `takesString` with `x` bound to `x` because boolean literal `true`
is incompatible with string.


Error ----------------------------------------------------------- mixed.js:89:17

Cannot call `takesString` with `x` bound to `x` because boolean literal `false`
is incompatible with string.


Error ------------------------------------------------------------ mixed.js:97:8

Cannot cast `x['foo']` to string because mixed is incompatible with string.


Error ---------------------------------------------------------- mixed.js:119:17

Cannot call `takesString` with `x[0]` bound to `x` because mixed is incompatible
with string.


Error --------------------------------------------------------------- not.js:5:5

Cannot perform arithmetic operation because boolean is not a number.


Error --------------------------------------------------------------- not.js:5:5

Cannot perform arithmetic operation because null or undefined is not a number.


Error --------------------------------------------------------------- not.js:5:5

Cannot assign number to `x` because number is incompatible with boolean.


Error --------------------------------------------------------------- not.js:5:5

number is incompatible with boolean.


Error -------------------------------------------------------------- not.js:11:5

Cannot get `x[0]` because:
 - an indexer property is missing in `Number`.
 - an indexer property is missing in null or undefined.


Error -------------------------------------------------------------- not.js:21:5

Cannot get `x[0]` because an indexer property is missing in `Number`.


Error -------------------------------------------------------------- not.js:41:6

Cannot cast `!x` to boolean literal `false` because boolean is incompatible with
boolean literal `false`.


Error -------------------------------------------------------------- not.js:44:6

Cannot cast `!x` to boolean literal `false` because boolean is incompatible with
boolean literal `false`.


Error -------------------------------------------------------------- not.js:47:6

Cannot cast `!x` to boolean literal `false` because boolean is incompatible with
boolean literal `false`.


Error ------------------------------------------------------------- null.js:4:13

Cannot perform arithmetic operation because null is not a number.


Error -------------------------------------------------------------- null.js:7:7

Cannot perform arithmetic operation because null is not a number.


Error ------------------------------------------------------------ number.js:8:8

Cannot cast `x` to undefined because number literal `0` is incompatible with
undefined.


Error ----------------------------------------------------------- number.js:10:6

Cannot cast `x` to number literal `0` because number is incompatible with number
literal `0`.


Error ----------------------------------------------------------- number.js:15:8

Cannot cast `x` to number literal `0` because number is incompatible with number
literal `0`.


Error ----------------------------------------------------------- number.js:17:6

Cannot cast `x` to undefined because number is incompatible with undefined.


Error ---------------------------------------------------------- number.js:21:15

number literal `0` is incompatible with number literal `1`.


Error ---------------------------------------------------------- number.js:28:15

number literal `1` is incompatible with number literal `0`.


Error ---------------------------------------------------------- number.js:35:15

number literal `1` is incompatible with number literal `0`.


Error ----------------------------------------------------------- number.js:51:8

Cannot cast `x` to undefined because:
 - number literal `0` is incompatible with undefined.
 - number literal `0` is incompatible with undefined.


Error ----------------------------------------------------------- number.js:55:8

Cannot cast `x` to undefined because:
 - number literal `1` is incompatible with undefined.
 - number literal `1` is incompatible with undefined.


Error ---------------------------------------------------------- number.js:63:12

Cannot return `x.foo` because number is incompatible with number literal `0`.


Error ---------------------------------------------------------- number.js:97:14

Cannot return `s` because number literal `3` is incompatible with number enum.


Error --------------------------------------------------------- number.js:116:14

Cannot return `x` because number is incompatible with number literal `0`.


Error -------------------------------------------------------- property.js:71:12

Cannot return `x[y.z]` because null or undefined is incompatible with string.


Error ------------------------------------------------------ refinements.js:4:24

Cannot assign `x` to `y` because number is incompatible with string.


Error ------------------------------------------------------ refinements.js:7:20

Cannot assign `x` to `z` because:
 - boolean is incompatible with string.
 - null is incompatible with string.


Error ----------------------------------------------------- refinements.js:13:24

Cannot assign `x` to `y` because:
 - null is incompatible with string.
 - number is incompatible with string.


Error ----------------------------------------------------- refinements.js:16:20

Cannot assign `x` to `z` because boolean is incompatible with string.


Error ----------------------------------------------------- refinements.js:33:24

Cannot assign `x` to `y` because:
 - string is incompatible with number.
 - string is incompatible with number.


Error ----------------------------------------------------- refinements.js:36:20

Cannot assign `x` to `z` because number is incompatible with string.


Error ----------------------------------------------------- refinements.js:43:24

Cannot assign `x` to `y` because number is incompatible with string.


Error ----------------------------------------------------- refinements.js:45:20

Cannot assign `x` to `z` because:
 - boolean is incompatible with string.
 - null is incompatible with string.


Error ----------------------------------------------------- refinements.js:54:20

Cannot assign `x` to `z` because boolean is incompatible with number.


Error ------------------------------------------------------------ string.js:8:8

Cannot cast `x` to undefined because string literal `foo` is incompatible with
undefined.


Error ----------------------------------------------------------- string.js:10:6

Cannot cast `x` to string literal `foo` because string is incompatible with
string literal `foo`.


Error ----------------------------------------------------------- string.js:15:8

Cannot cast `x` to string literal `foo` because string is incompatible with
string literal `foo`.


Error ----------------------------------------------------------- string.js:17:6

Cannot cast `x` to undefined because string is incompatible with undefined.


Error ---------------------------------------------------------- string.js:21:15

string literal `foo` is incompatible with string literal `bar`.


Error ---------------------------------------------------------- string.js:28:15

string literal `bar` is incompatible with string literal `foo`.


Error ---------------------------------------------------------- string.js:35:15

string literal `bar` is incompatible with string literal `foo`.


Error ----------------------------------------------------------- string.js:51:8

Cannot cast `x` to undefined because:
 - string literal `foo` is incompatible with undefined.
 - string literal `foo` is incompatible with undefined.


Error ----------------------------------------------------------- string.js:55:8

Cannot cast `x` to undefined because:
 - string literal `bar` is incompatible with undefined.
 - string literal `bar` is incompatible with undefined.


Error ---------------------------------------------------------- string.js:63:12

Cannot return `x.foo` because string is incompatible with string literal `foo`.


Error ---------------------------------------------------------- string.js:98:14

Cannot return `s` because string literal `d` is incompatible with string enum.


Error --------------------------------------------------------- string.js:117:14

Cannot return `x` because string is incompatible with empty string.


Error ---------------------------------------------------- super_member.js:13:14

Cannot return `super.prop` because property `prop` of unknown type is
incompatible with string.


Error ----------------------------------------------------------- switch.js:8:14

Cannot return `text` because number is incompatible with string.


Error ---------------------------------------------------------- switch.js:27:14

Cannot get `text[0]` because an indexer property is missing in `Number`.


Error ---------------------------------------------------------- switch.js:37:14

Cannot get `text[0]` because an indexer property is missing in `Number`.


Error ---------------------------------------------------------- switch.js:51:15

Cannot perform arithmetic operation because string is not a number.


Error ---------------------------------------------------- tagged_union.js:20:20

Cannot call `x.prop1.charAt` because property `charAt` is missing in undefined.


Error ---------------------------------------------------- tagged_union.js:34:30

Cannot cast `x.taste` to string literal `Good` because string literal `Bad` is
incompatible with string literal `Good`.


Error ----------------------------------------------------- tagged_union.js:35:9

Cannot cast `x.raw` to string literal `No` because string literal `Maybe` is
incompatible with string literal `No`.


Error ----------------------------------------------------- tagged_union.js:40:6

Cannot cast `x.raw` to union type because string literal `Maybe` is incompatible
with string enum.


Error ----------------------------------------------------- tagged_union.js:40:8

Cannot get `x.raw` because property `raw` is missing in `Orange`.


Error ---------------------------------------------------- tagged_union.js:72:21

Cannot get `x.A` because property `A` is missing in `C`.


Error ----------------------------------------------------- tagged_union.js:89:8

Cannot cast `x.kindTypo` to string because number literal `1` is incompatible
with string.


Error ---------------------------------------------------- tagged_union.js:96:11

Cannot get `x.fooTypo` because property `fooTypo` is missing in object type.


Error --------------------------------------------------- tagged_union.js:101:27

Cannot call `null.toString` because property `toString` is missing in null.


Error --------------------------------------------------- tagged_union.js:102:35

Cannot call `null.toString` because property `toString` is missing in null.


Error ---------------------------------------------------- tagged_union.js:113:8

Cannot cast `x.legnth` to string because number literal `0` is incompatible with
string.


Error ---------------------------------------------------- tagged_union.js:118:8

Cannot cast `y.legnth` to string because number literal `0` is incompatible with
string.


Error ---------------------------------------------------- tagged_union.js:123:8

Cannot cast `z.toStirng` to string because number literal `0` is incompatible
with string.


Error ---------------------------------------------------- tagged_union.js:128:8

Cannot cast `q.valeuOf` to string because number literal `0` is incompatible
with string.


Error ---------------------------------------------------- tagged_union.js:146:8

Cannot cast `x.str` to string literal `not str` because string literal `str` is
incompatible with string literal `not str`.


Error ---------------------------------------------------- tagged_union.js:149:8

Cannot cast `x.num` to number literal `456` because number literal `123` is
incompatible with number literal `456`.


Error ---------------------------------------------------- tagged_union.js:152:8

Cannot cast `x.bool` to boolean literal `false` because boolean literal `true`
is incompatible with boolean literal `false`.


Error ---------------------------------------------------- tagged_union.js:156:8

Cannot cast `x.badStr` to empty because string literal `bad` is incompatible
with empty.


Error ---------------------------------------------------- tagged_union.js:159:8

Cannot cast `x.badNum` to empty because number literal `123` is incompatible
with empty.


Error ---------------------------------------------------- tagged_union.js:162:8

Cannot cast `x.badBool` to empty because boolean literal `true` is incompatible
with empty.


Error ---------------------------------------------------- tagged_union.js:170:9

Cannot get `x.z` because property `z` is missing in object type.


Error ---------------------------------------------------- tagged_union.js:173:9

Cannot get `x.y` because property `y` is missing in object type.


Error ---------------------------------------------------- tagged_union.js:177:9

Cannot get `x.y` because property `y` is missing in object type.


Error ---------------------------------------------------- tagged_union.js:180:9

Cannot get `x.z` because property `z` is missing in object type.


Error ---------------------------------------------------- tagged_union.js:188:9

Cannot get `x.z` because property `z` is missing in object type.


Error ---------------------------------------------------- tagged_union.js:190:9

Cannot get `x.y` because property `y` is missing in object type.


Error ---------------------------------------------------- tagged_union.js:191:9

Cannot get `x.z` because property `z` is missing in object type.


Error ---------------------------------------------------- tagged_union.js:196:9

Cannot get `x.y` because property `y` is missing in object type.


Error ---------------------------------------------------- tagged_union.js:199:9

Cannot get `x.z` because property `z` is missing in object type.


Error ---------------------------------------------------- tagged_union.js:207:9

Cannot get `x.z` because property `z` is missing in object type.


Error ---------------------------------------------------- tagged_union.js:209:9

Cannot get `x.y` because property `y` is missing in object type.


Error ---------------------------------------------------- tagged_union.js:210:9

Cannot get `x.z` because property `z` is missing in object type.


Error ---------------------------------------------------- tagged_union.js:215:9

Cannot get `x.y` because property `y` is missing in object type.


Error ---------------------------------------------------- tagged_union.js:217:9

Cannot get `x.y` because property `y` is missing in object type.


Error ---------------------------------------------------- tagged_union.js:218:9

Cannot get `x.z` because property `z` is missing in object type.


Error ---------------------------------------------------- tagged_union.js:228:9

Cannot get `x.y` because property `y` is missing in object type.


Error ---------------------------------------------------- tagged_union.js:229:9

Cannot get `x.z` because property `z` is missing in object type.


Error ---------------------------------------------------- tagged_union.js:237:9

Cannot get `x.z` because property `z` is missing in object type.


Error ---------------------------------------------------- tagged_union.js:240:9

Cannot get `x.y` because property `y` is missing in object type.


Error ---------------------------------------------------- tagged_union.js:244:9

Cannot get `x.y` because property `y` is missing in object type.


Error ---------------------------------------------------- tagged_union.js:247:9

Cannot get `x.z` because property `z` is missing in object type.


Error ---------------------------------------------------- tagged_union.js:255:9

Cannot get `x.z` because property `z` is missing in object type.


Error ---------------------------------------------------- tagged_union.js:258:9

Cannot get `x.y` because property `y` is missing in object type.


Error ---------------------------------------------------- tagged_union.js:262:9

Cannot get `x.y` because property `y` is missing in object type.


Error ---------------------------------------------------- tagged_union.js:265:9

Cannot get `x.z` because property `z` is missing in object type.


Error ------------------------------------------------------------ typeof.js:5:5

Cannot get `x[0]` because an indexer property is missing in `Boolean`.


Error ---------------------------------------------------------- typeof.js:12:12

Cannot return `x` because null is incompatible with number.


Error ----------------------------------------------------------- typeof.js:23:3

Cannot call `BAZ.stuff` because:
 - undefined is not a function.
 - property `stuff` is missing in undefined.


Error ----------------------------------------------------------- typeof.js:26:7

Cannot get `BAZ.stuff` because property `stuff` is missing in undefined.


Error ----------------------------------------------------------- typeof.js:30:9

Cannot call `BAZ.stuff` because undefined is not a function.


Error ---------------------------------------------------------- typeof.js:49:20

Cannot compare the result of `typeof` to string literal `foo` because it is not
a valid `typeof` return value.


Error ---------------------------------------------------------- typeof.js:61:20

Cannot compare the result of `typeof` to string literal `foo` because it is not
a valid `typeof` return value.


Error ----------------------------------------------------------- typeof.js:69:6

Cannot cast `Foo` to empty because statics of `Foo` is incompatible with empty.


Error ----------------------------------------------------------- typeof.js:77:6

Cannot cast `x` to empty because `Foo` is incompatible with empty.


Error ----------------------------------------------------------- undef.js:31:13

Cannot perform arithmetic operation because null or undefined is not a number.


Error ----------------------------------------------------------- undef.js:38:13

Cannot perform arithmetic operation because null or undefined is not a number.


Error ----------------------------------------------------------- undef.js:44:13

Cannot perform arithmetic operation because null or undefined is not a number.


Error ----------------------------------------------------------- undef.js:51:13

Cannot perform arithmetic operation because null or undefined is not a number.


Error ----------------------------------------------------------- undef.js:69:13

Cannot perform arithmetic operation because null or undefined is not a number.


Error ----------------------------------------------------------- undef.js:74:13

Cannot perform arithmetic operation because undefined is not a number.


Error ------------------------------------------------------------ undef.js:77:7

Cannot perform arithmetic operation because undefined is not a number.


Error ------------------------------------------------------------- union.js:7:5

Cannot get `x[0]` because an indexer property is missing in `Boolean`.


Error ------------------------------------------------------------ union.js:13:5

Cannot get `x[0]` because an indexer property is missing in `Number`.


Error ------------------------------------------------------------ union.js:19:5

Cannot get `x[0]` because an indexer property is missing in `Number`.


Error ------------------------------------------------------------ void.js:31:13

Cannot perform arithmetic operation because null or undefined is not a number.


Error ------------------------------------------------------------ void.js:38:13

Cannot perform arithmetic operation because null or undefined is not a number.


Error ------------------------------------------------------------ void.js:44:13

Cannot perform arithmetic operation because null or undefined is not a number.


Error ------------------------------------------------------------ void.js:51:13

Cannot perform arithmetic operation because null or undefined is not a number.


Error ------------------------------------------------------------ void.js:56:32

Cannot perform arithmetic operation because null or undefined is not a number.


Error ------------------------------------------------------------ void.js:62:32

Cannot perform arithmetic operation because null or undefined is not a number.


Error ------------------------------------------------------------ void.js:69:36

Cannot perform arithmetic operation because null or undefined is not a number.


Error ------------------------------------------------------------ void.js:75:36

Cannot perform arithmetic operation because null or undefined is not a number.


Error ------------------------------------------------------------ void.js:82:13

Cannot perform arithmetic operation because undefined is not a number.


Error ------------------------------------------------------------- void.js:85:7

Cannot perform arithmetic operation because undefined is not a number.



Found 189 errors
